Write unit tests for violations/RuleViolation.java, and modify unit tests in violations.